# fastapi-planner

./: Makefile  README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: test.yml
