[tool.poetry]
name = "planning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
beanie = "^1.29.0"
dotenv = "^0.9.9"
httpx = "^0.28.1"
pydantic = {extras = ["email"], version = "^2.11.3"}
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
